feat(minio): Apply systemd-hardening to minio unit
This patch reworks the minio integration to use systemd hardening
features This will help to protect the system from unexpected harm. It's
achieved by splitting the start script into two parts, one for setting
up the permissions, requiring root, and one starting minio as before.

Further systemd will now make sure, that all binaries are where they are
supposed to be and executable.

Finally we isolate the execution environment from the rest of the
system by using `ProtectProc`, `ProtectSystem` and `ProtectHome`,
allowing only read-write operations on `/mnt` where our pools are
located. Finally we explicitly don't want PrivateTmp, since our home
directory is in `/var/tmp` and would be deleted when the service exists.

--- a/debian/minio.service
+++ b/debian/minio.service
@@ -1,11 +1,26 @@
 [Unit]
 Description=High Performance Object Storage
 After=network.target
+AssertFileIsExecutable=/usr/bin/minio
+AssertFileIsExecutable=/usr/bin/minio-truenas
+AssertFileIsExecutable=/usr/bin/minio-truenas-prepare
 
 [Service]
+ExecStartPre=+/usr/bin/minio-truenas-prepare
 ExecStart=/usr/bin/minio-truenas
+User=minio
+Group=minio
 Restart=on-failure
 RestartSec=10
+
+NoNewPrivileges=yes
+ProtectProc=invisible
+ProtectSystem=strict
+ProtectHome=yes
+RestrictSUIDSGID=yes
+ReadWritePaths=/mnt
+ProtectClock=yes
+PrivateTmp=false
 
 [Install]
 WantedBy=multi-user.target
