--- a/debian/rules
+++ b/debian/rules
@@ -12,6 +12,7 @@ override_dh_install:
 	mkdir -p debian/minio/usr/bin
 	cp minio debian/minio/usr/bin
 	cp minio-truenas debian/minio/usr/bin
+	cp minio-truenas-prepare debian/minio/usr/bin
 
 override_dh_installsystemd:
 	dh_installsystemd --no-start -r --no-restart-after-upgrade --name=minio
